--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html lang="en">
 
 <head>
-    <title>Ristorante Con Fusion</title>
+    <!-- Required meta tags always come first -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <title>Cafe Minutka</title>
 </head>
 
 <body>
@@ -11,8 +18,8 @@
         <div>
             <div>
                 <div>
-                    <h1>Ristorante con Fusion</h1>
-                    <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
+                    <h1>Cafe Minutka</h1>
+                    <p>We take inspiration from the best cuisines, and create a unique experience. Our lipsmacking creations will tickle your senses!</p>
                 </div>
                 <div>
                 </div>
@@ -26,8 +33,8 @@
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div>
-                <h2>Uthappizza</h2>
-                <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                <h2>Dodapizza</h2>
+                <p>A unique combination of Uzbek Doda (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Kavkaz onion, Indoneziyan red chillies and Fresh cheese.</p>
             </div>
         </div>
 
@@ -38,7 +45,7 @@
             </div>
             <div>
                 <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just 29.900sum per person </p>
             </div>
         </div>
 
@@ -47,9 +54,9 @@
                 <h3>Meet our Culinary Specialists</h3>
             </div>
             <div>
-                <h2>Alberto Somayya</h2>
+                <h2>Rakhim Berdiev</h2>
                 <h4>Executive Chef</h4>
-                <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Uzbek-Italian fusion experiences. </p>
             </div>
         </div>
     </div>
@@ -69,12 +76,12 @@
                 <div>
                     <h5>Our Address</h5>
                     <address>
-		              121, Clear Water Bay Road<br>
-		              Clear Water Bay, Kowloon<br>
-		              HONG KONG<br>
-		              Tel.: +852 1234 5678<br>
-		              Fax: +852 8765 4321<br>
-		              Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
+		              20, Leninsk street<br>
+		              Asaka city, Andijan<br>
+		              UZBEKISTAN<br>
+		              Tel.: +998 97 332 3636<br>
+		              Fax: +998 74 332 3636<br>
+		              Email: <a href="mailto:minutka3636@mail.ru">minutka3636@mail.ru</a>
 		           </address>
                 </div>
                 <div>
@@ -90,12 +97,18 @@
            </div>
            <div>             
                 <div>
-                    <p>© Copyright 2018 Ristorante Con Fusion</p>
+                    <p>© Copyright 2016 Cafe Minutka</p>
                 </div>
            </div>
         </div>
     </footer>
+    <!-- Required meta tags always come first -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
 
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 </body>
 
 </html>
