--- a/index.html
+++ b/index.html
@@ -14,46 +14,46 @@
 
 <body>
 
-    <header>
-        <div>
-            <div>
-                <div>
+    <header class="jumbotron">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-sm-6">
                     <h1>Cafe Minutka</h1>
                     <p>We take inspiration from the best cuisines, and create a unique experience. Our lipsmacking creations will tickle your senses!</p>
                 </div>
-                <div>
+                <div class="col-12 col-sm">
                 </div>
             </div>
         </div>
     </header>
 
-    <div>
-        <div>
-            <div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
-            <div>
+            <div class="col col-sm order-sm-first col-md">
                 <h2>Dodapizza</h2>
                 <p>A unique combination of Uzbek Doda (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Kavkaz onion, Indoneziyan red chillies and Fresh cheese.</p>
             </div>
         </div>
 
 
-        <div>
-            <div>
+        <div class="row">
+            <div class="col-12 col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div>
+            <div class="col col-sm col-md">
                 <h2>Weekend Grand Buffet</h2>
                 <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just 29.900sum per person </p>
             </div>
         </div>
 
-        <div>
-            <div>
+        <div class="row">
+            <div class="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Meet our Culinary Specialists</h3>
             </div>
-            <div>
+            <div class="col col-sm order-sm-first col-md">
                 <h2>Rakhim Berdiev</h2>
                 <h4>Executive Chef</h4>
                 <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Uzbek-Italian fusion experiences. </p>
@@ -62,9 +62,9 @@
     </div>
 
     <footer>
-        <div>
-            <div>             
-                <div>
+        <div class="container">
+            <div class="row">             
+                <div class="col-4 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -73,7 +73,7 @@
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
-                <div>
+                <div class="col-7 col-sm-5">
                     <h5>Our Address</h5>
                     <address>
 		              20, Leninsk street<br>
@@ -84,7 +84,7 @@
 		              Email: <a href="mailto:minutka3636@mail.ru">minutka3636@mail.ru</a>
 		           </address>
                 </div>
-                <div>
+                <div class="col-12 col-sm-4">
                     <div>
                         <a href="http://google.com/+">Google+</a>
                         <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
@@ -95,8 +95,8 @@
                     </div>
                 </div>
            </div>
-           <div>             
-                <div>
+           <div class="row">             
+                <div class="col-auto">
                     <p>© Copyright 2016 Cafe Minutka</p>
                 </div>
            </div>
