--- a/aboutus.html
+++ b/aboutus.html
@@ -22,7 +22,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand mr-auto" href="./index.html">Cafe Minutka</a>
+            <a class="navbar-brand mr-auto" href="./index.html"><img src="img/logo-minutka.png" height="30" width="41"></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
@@ -40,7 +40,8 @@
                     <h1>Cafe Minutka</h1>
                     <p>We take inspiration from the best cuisines, and create a unique experience. Our lipsmacking creations will tickle your senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm align-self-center">
+                    <img src="img/logo-minutka.png" class="img-fluid">                    
                 </div>
             </div>
         </div>
