--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand mr-auto" href="#">Cafe Minutka</a>
+        <a class="navbar-brand mr-auto" href="#"><img src="img/logo-minutka.png" height="30" width="41"></a>
         <div class="collapse navbar-collapse" id="Navbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Home</a></li>
@@ -40,7 +40,8 @@
                     <h1>Cafe Minutka</h1>
                     <p>We take inspiration from the best cuisines, and create a unique experience. Our lipsmacking creations will tickle your senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm align-self-center">
+                    <img src="img/logo-minutka.png" class="img-fluid">                    
                 </div>
             </div>
         </div>
@@ -52,8 +53,14 @@
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col col-sm order-sm-first col-md">
-                <h2>Dodapizza</h2>
-                <p>A unique combination of Uzbek Doda (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Kavkaz onion, Indoneziyan red chillies and Fresh cheese.</p>
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                            src="img/Dodapizza.png" alt="Dodapizza">
+                    <div class="media-body">
+                        <h2 class="mt-0">Dodapizza</h2>
+                        <p class="d-none d-sm-block">A unique combination of Uzbek Doda (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Kavkaz onion, Indoneziyan red chillies and Fresh cheese.</p>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -73,9 +80,15 @@
                 <h3>Meet our Culinary Specialists</h3>
             </div>
             <div class="col col-sm order-sm-first col-md">
-                <h2>Rakhim Berdiev</h2>
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                            src="img/Rakhim.jpg" alt="Rakhim Berdiev" width="120" height="180">
+                    <div class="media-body">
+                <h2 class="mt-0">Rakhim Berdiev</h2>
                 <h4>Executive Chef</h4>
-                <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Uzbek-Italian fusion experiences. </p>
+                <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Uzbek-Italian fusion experiences. </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
