--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <img class="d-flex mr-3 img-thumbnail align-self-center"
                             src="img/Dodapizza.png" alt="Dodapizza">
                     <div class="media-body">
-                        <h2 class="mt-0">Dodapizza</h2>
+                        <h2 class="mt-0">Dodapizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">8.99sum</span></h2>
                         <p class="d-none d-sm-block">A unique combination of Uzbek Doda (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Kavkaz onion, Indoneziyan red chillies and Fresh cheese.</p>
                     </div>
                 </div>
